<resources>
    <string name="app_name">MessageMe</string>
    <string name="username_text">Username</string>
    <string name="email_text">Email</string>
    <string name="password_text">Password</string>
    <string name="register_text">Register</string>
    <string name="already_have_an_account_text">Already have an account?</string>
    <string name="empty_field_message">Please fill all required fields</string>
    <string name="back_to_registration_text">Back to registration</string>
    <string name="login_text">Login</string>
    <string name="select_photo_text">Select Photo</string>
    <string name="enter_message_text">Enter Message</string>
    <string name="send_button_text">Send</string>
</resources>
