<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_blue_light"
    tools:context=".ui.onboarding.RegisterActivity">

    <EditText
        android:id="@+id/usernameEditText"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/rounded_text"
        android:ems="10"
        android:hint="@string/username_text"
        android:inputType="textPersonName"
        android:paddingStart="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/selectPhotoButton"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/rounded_text"
        android:ems="10"
        android:hint="@string/email_text"
        android:paddingStart="16dp"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="@+id/usernameEditText"
        app:layout_constraintStart_toStartOf="@+id/usernameEditText"
        app:layout_constraintTop_toBottomOf="@+id/usernameEditText"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/rounded_text"
        android:ems="10"
        android:hint="@string/password_text"
        android:paddingStart="16dp"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/emailEditText"
        app:layout_constraintStart_toStartOf="@+id/emailEditText"
        app:layout_constraintTop_toBottomOf="@+id/emailEditText"
        tools:ignore="RtlSymmetry" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/register_text"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="@+id/passwordEditText"
        app:layout_constraintStart_toStartOf="@+id/passwordEditText"
        app:layout_constraintTop_toBottomOf="@+id/passwordEditText"
        android:background="@drawable/rounded_button"
        android:foreground="?android:selectableItemBackground"/>

    <TextView
        android:id="@+id/alreadyHaveAccountTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/already_have_an_account_text"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        android:foreground="?android:selectableItemBackground"
        app:layout_constraintEnd_toEndOf="@+id/registerButton"
        app:layout_constraintStart_toStartOf="@+id/registerButton"
        app:layout_constraintTop_toBottomOf="@+id/registerButton" />

    <Button
        android:id="@+id/selectPhotoButton"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/circle_button"
        android:foreground="?android:selectableItemBackground"
        android:text="@string/select_photo_text"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/selectPhotoImageView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:layout_constraintBottom_toBottomOf="@+id/selectPhotoButton"
        app:layout_constraintEnd_toEndOf="@+id/selectPhotoButton"
        app:layout_constraintStart_toStartOf="@+id/selectPhotoButton"
        app:layout_constraintTop_toTopOf="@+id/selectPhotoButton"
        app:civ_border_width="4dp"/>
</android.support.constraint.ConstraintLayout>